# opengloves-protocol

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
.github/workflows/: build.yml
protos/driver/: driver_input.proto
protos/server/: server_input.proto  server_output.proto
